Fixing the text align

--- a/stylesheets/modules/_article.scss
+++ b/stylesheets/modules/_article.scss
@@ -26,7 +26,6 @@ article {
   padding: 20px 0 40px 0;
   border-top: 1px solid #424242;
   margin: 0 auto;
-  text-align: center;
   ul {
     margin: 0;
     padding: 0;
